// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appends "_focused" to className if hasFocus is true 1`] = `
<button
  aria-label="Color's  option red"
  className="root_focused"
  onClick={[Function]}
  style={
    Object {
      "--venia-swatch-bg": "#123123",
    }
  }
  title="red"
  type="button"
>
  <span
    className="root"
  >
    <svg
      className="icon"
      fill="none"
      height={24}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="20 6 9 17 4 12"
      />
    </svg>
  </span>
</button>
`;

exports[`appends "_outOfStock" to className if isEverythingOutOfStock is true 1`] = `
<button
  aria-label="Color's  option red"
  className="root_outOfStock"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "--venia-swatch-bg": "#123123",
    }
  }
  title="red"
  type="button"
>
  <span
    className="root"
  >
    <svg
      className="icon"
      fill="none"
      height={24}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="20 6 9 17 4 12"
      />
    </svg>
  </span>
</button>
`;

exports[`appends "_outOfStock" to className if isOptionOutOfStock is true 1`] = `
<button
  aria-label="Color's  option red"
  className="root_outOfStock"
  disabled={true}
  onClick={[Function]}
  style={
    Object {
      "--venia-swatch-bg": "#123123",
    }
  }
  title="red"
  type="button"
/>
`;

exports[`appends "_selected" to className if isSelected is true 1`] = `
<button
  aria-label="Color's Selected option red"
  className="root_selected"
  onClick={[Function]}
  style={
    Object {
      "--venia-swatch-bg": "#123123",
    }
  }
  title="red"
  type="button"
>
  <span
    className="root"
  >
    <svg
      className="icon"
      fill="none"
      height={24}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="20 6 9 17 4 12"
      />
    </svg>
  </span>
</button>
`;

exports[`renders a Swatch correctly 1`] = `
<button
  aria-label="Color's  option red"
  className="root"
  onClick={[Function]}
  style={
    Object {
      "--venia-swatch-bg": "#123123",
    }
  }
  title="red"
  type="button"
>
  <span
    className="root"
  >
    <svg
      className="icon"
      fill="none"
      height={24}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="20 6 9 17 4 12"
      />
    </svg>
  </span>
</button>
`;

exports[`renders an icon if isSelected is true 1`] = `
<button
  aria-label="Color's Selected option red"
  className="root_selected"
  onClick={[Function]}
  style={
    Object {
      "--venia-swatch-bg": "#123123",
    }
  }
  title="red"
  type="button"
>
  <span
    className="root"
  >
    <svg
      className="icon"
      fill="none"
      height={24}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth="2"
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="20 6 9 17 4 12"
      />
    </svg>
  </span>
</button>
`;
